WORKING CRUD FUNCTION

--- a/app/views/books/_form.html.erb
+++ b/app/views/books/_form.html.erb
@@ -3,12 +3,18 @@
   <%= f.text_field :title %>
 
   <%= f.label :author %>
-  <%= f.text_field :author %
+  <%= f.text_field :author %>
 
   <%= f.label :photo_url %>
   <%= f.text_field :photo_url %>
 
-  <%= f.label :has_read, "Short Description" %>
-  <%= f.radio :has_read %>
+  <%= f.label :has_read , :value => true%>
+  <%= f.radio_button :has_read, true %>
+
+  <%= f.label :has_read , :value => false%>
+  <%= f.radio_button :has_read, false %>
+
+
 
   <%= f.submit "Submit" %>
+<% end %>
