--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -7,7 +7,17 @@
   <%= csrf_meta_tags %>
 </head>
 <body>
-
+<div class = "nav">
+<ul>
+  <% if user_signed_in? %>
+    <li><%= link_to "Home", root_path %></li>
+    <li><%= link_to "Logout", destroy_user_session_path, method: :delete %></li>
+  <% else %>
+    <li><%= link_to "Home", root_path %></li>
+    <li><%= link_to "Login", new_user_session_path %></li>
+  <% end %>
+</ul>
+</div>
 <%= yield %>
 
 </body>
