--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -1,15 +1,78 @@
-/*
- * This is a manifest file that'll be compiled into application.css, which will include all the files
- * listed below.
- *
- * Any CSS and SCSS file within this directory, lib/assets/stylesheets, vendor/assets/stylesheets,
- * or any plugin's vendor/assets/stylesheets directory can be referenced here using a relative path.
- *
- * You're free to add application-wide styles to this file and they'll appear at the bottom of the
- * compiled file so the styles you add here take precedence over styles defined in any styles
- * defined in the other CSS/SCSS files in this directory. It is generally better to create a new
- * file per style scope.
- *
- *= require_tree .
- *= require_self
- */
+body {
+  margin: 0 auto;
+  background-color: #DDDDDD
+}
+
+.nav {
+  background: #F7F7F7;
+  display: block;
+}
+
+.nav ul {
+  margin: 0 auto;
+}
+
+.nav li {
+  display: inline-block;
+  padding: 15px;
+}
+
+.nav a {
+  font-family: 'Muli', sans-serif;
+  font-size: .9em;
+  text-decoration: none;
+  text-transform: uppercase;
+  letter-spacing: .5px;
+  font-weight: 700;
+}
+
+/*Login Screen*/
+
+#login {
+  margin: 50px auto;
+  width: 400px;
+}
+
+#login h2 {
+  background-color: #f95252;
+  border-radius: 20px 20px 0 0;
+  color: #fff;
+  font-size: 28px;
+  padding: 20px 26px;
+  margin: 0;
+}
+
+#login .fieldset {
+	background-color: #fff;
+	-webkit-border-radius: 0 0 20px 20px;
+	-moz-border-radius: 0 0 20px 20px;
+	border-radius: 0 0 20px 20px;
+	padding: 20px 26px;
+}
+
+input {
+  background-color: #eee;
+	color: #777;
+	padding: 4px 10px;
+	width: 328px;
+  margin: 5px 0 20px 0;
+}
+
+input[type = submit] {
+width: auto;
+padding: 9px 15px;
+background-color: gray;
+border: 0;
+font-size: 14px;
+color: #FFFFFF;
+align-items: center;
+}
+
+#login input[type="submit"] {
+	background-color: #33cc77;
+	color: #fff;
+	display: block;
+	margin: 0 auto;
+	padding: 4px 0;
+	width: 100px;
+}
