--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -10,8 +10,8 @@
 <div class = "nav">
 <ul>
   <% if user_signed_in? %>
-    <li><%= link_to "Now Reading", root_path %></li>
-    <li><%= link_to "On the Shelf", books_path(:request_type => 'reads') %></li>
+    <li><%= link_to "All Books", root_path %></li>
+    <li><%= link_to "Currently Reading", books_path(:request_type => 'reads') %></li>
       <li>
     <li><%= link_to "Logout", destroy_user_session_path, method: :delete %></li>
   <% else %>
@@ -20,7 +20,12 @@
   <% end %>
 </ul>
 </div>
-<%= yield %>
+<div class="container">
+  <p class="notice"><%= notice %></p>
+  <p class="alert"><%= alert %></p>
 
+  <%= yield %>
+
+</div>
 </body>
 </html>
