--- a/app/views/books/_form.html.erb
+++ b/app/views/books/_form.html.erb
@@ -1,3 +1,4 @@
+<div class="book-form">
 <%= form_for (@book) do |f| %>
   <%= f.label :title %>
   <%= f.text_field :title %>
@@ -10,3 +11,4 @@
 
   <%= f.submit "Submit" %>
 <% end %>
+</div>
