--- a/app/views/comments/_form.html.erb
+++ b/app/views/comments/_form.html.erb
@@ -1,9 +1,11 @@
-<%= form_for ([@book, @comment]) do |f| %>
-  <%= f.label :subject %>
-  <%= f.text_field :subject %>
+<div class = "custom-form">
+  <%= form_for ([@book, @comment]) do |f| %>
+    <%= f.label :subject %>
+    <%= f.text_field :subject %>
 
-  <%= f.label :body %>
-  <%= f.text_field :body %>
+    <%= f.label :body %>
+    <%= f.text_field :body %>
 
-  <%= f.submit "Submit" %>
-<% end %>
+    <%= f.submit "Submit" %>
+  <% end %>
+</div>
